# authzed-api

./: buf.yaml
cs/: buf.gen.yaml
go/: README.md  apidocs.swagger.json  buf.gen.yaml  go.mod  go.sum
go/authzed/api/v0/: core.pb.go  core_vtproto.pb.go  developer.pb.go  developer_vtproto.pb.go
go/authzed/api/v1/: core.pb.go  core.pb.validate.go  core_vtproto.pb.go  debug.pb.go  debug_vtproto.pb.go  error_reason.pb.go  error_reason.pb.validate.go  experimental_service.pb.go  experimental_service.pb.gw.go  experimental_service.pb.validate.go  experimental_service_grpc.pb.go  experimental_service_vtproto.pb.go  openapi.pb.go  openapi.pb.validate.go  permission_service.pb.go  permission_service.pb.gw.go  permission_service.pb.validate.go  permission_service_grpc.pb.go  permission_service_vtproto.pb.go  schema_service.pb.go  schema_service.pb.gw.go  schema_service.pb.validate.go  schema_service_grpc.pb.go  schema_service_vtproto.pb.go  watch_service.pb.go  watch_service.pb.gw.go  watch_service.pb.validate.go  watch_service_grpc.pb.go  watch_service_vtproto.pb.go
go/authzed/api/v1alpha1/: schema.pb.go  schema.pb.validate.go  schema_grpc.pb.go  (+6 more)
go/google/api/: annotations.pb.go  http.pb.go  http_vtproto.pb.go
go/google/rpc/: status.pb.go  status_vtproto.pb.go
go/magefiles/: go.mod
go/protoc-gen-openapiv2/options/: annotations.pb.go  openapiv2.pb.go  openapiv2_vtproto.pb.go
go/validate/: validate.pb.go  validate_vtproto.pb.go
java/: build.gradle  gradlew.bat
py/: README.md  buf.gen.yaml  pyproject.toml
py/authzed/api/v1/: permission_service_pb2.py  permission_service_pb2.pyi
py/google/rpc/: status_pb2.pyi
rb/: Gemfile  README.md  buf.gen.yaml  spicedb-protobuf.gemspec
rs/: Cargo.toml  README.md  buf.gen.yaml
rs/src/: authzed.api.materialize.v0.rs  authzed.api.materialize.v0.serde.rs  authzed.api.materialize.v0.tonic.rs  authzed.api.v0.rs  authzed.api.v0.serde.rs  authzed.api.v0.tonic.rs  authzed.api.v1.rs  authzed.api.v1.serde.rs  authzed.api.v1.tonic.rs  authzed.api.v1alpha1.rs  authzed.api.v1alpha1.serde.rs  authzed.api.v1alpha1.tonic.rs  mod.rs
ts/: README.md  buf.gen.yaml  package.json  pnpm-lock.yaml
(+23 files in other folders)
