[project]
name = "spicedb-protobuf"
dynamic = ["version"]
authors = [{ name = "Jimmy Zelinskie", email = "support@authzed.com"}]
description = "Generated Protobuf and gRPC types for SpiceDB"
readme = "README.md"

keywords = [ "spicedb", "grpc", "security" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Typing :: Typed",
]

requires-python = ">=3.9"
dependencies = [
  "grpcio==1.68",
  "protobuf==5.28.3",
  "typing-extensions==4.12.2",
]

[project.urls]
Homepage = "https://authzed.com"
Documentation = "https://authzed.com/docsg"
Repository = "https://github.com/authzed/api.git"
Issues = "https://github.com/authzed/api/issues"
Changelog = "https://github.com/authzed/api/releases"

[tool.uv]
dev-dependencies = [
  "grpc-stubs==1.53.0.5",
  "grpcio-tools==1.68.0",
  "mypy==1.13.0",
  "mypy-protobuf==3.6.0",
  "types-protobuf==5.28.3.20241030",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["authzed"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.mypy]
explicit_package_bases = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["google.rpc.*", "grpcutil"]
